Fill page, style some elements

--- a/index.html
+++ b/index.html
@@ -17,17 +17,48 @@
         </ul>
     </div>
     <div class="intro">
-
+        <div class="in_d">
+            <h1 class="head">This website is awesome</h1>
+            <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Quod maiores, laborum accusantium, distinctio deserunt, dolorum sit illo vero autem quos soluta reiciendis temporibus eos possimus odio deleniti quia officia perferendis tenetur provident accusamus minima. Rem ab dolor dignissimos alias aperiam! Corporis iste officiis expedita et veritatis placeat itaque quibusdam dolore?</p>
+            <button>Sign Up</button>
+        </div>
+        <img src="" class="in_pic" alt="PLACEHOLDER">
     </div>
     <div class="container">
+        <h3>Some random information.</h3>
+        <ul>
+            <div class="card">
+                <img src="" alt="first">
+                Lorem ipsum dolor, sit amet consectetur adipisicing elit. Architecto, aspernatur.
+            </div>
+            <div class="card">
+                <img src="" alt="second">
+                Lorem ipsum dolor, sit amet consectetur adipisicing elit. Architecto, aspernatur.
+            </div>
+            <div class="card">
+                <img src="" alt="third">
+                Lorem ipsum dolor, sit amet consectetur adipisicing elit. Architecto, aspernatur.
+            </div>
+            <div class="card">
+                <img src="" alt="fourth">
+                Lorem ipsum dolor, sit amet consectetur adipisicing elit. Architecto, aspernatur.
+            </div>
+        </ul>
 
     </div>
     <div class="quote">
-
+        Lorem ipsum dolor sit amet consectetur adipisicing elit. Beatae, accusamus magni eius, distinctio deserunt consequatur delectus voluptates enim dolorum reprehenderit soluta cupiditate nihil autem vero!
+        <span>-FinBzdKy, author</span>
     </div>
     <div class="sign">
-
+        <div class="text">
+            <div>Call to action! It's time!</div>
+            Signup for product by clicking that button right over there!
+        </div>
+        <button>Sign up</button>
     </div>
-    <div class="footer"></div>
+    <div class="footer">
+        Copyright @ INZDY 2022
+    </div>
 </body>
 </html>
